--- a/index.html
+++ b/index.html
@@ -1,47 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>For My Love ❤️</title>
+<title>For Tanu ❤️</title>
 <style>
 body {
   text-align: center;
-  font-family: Arial;
-  background-color: #ffebf0;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(135deg, #ff9a9e, #fad0c4);
   margin-top: 100px;
+  overflow: hidden;
 }
+
 h1 {
   font-size: 40px;
+  color: #fff;
 }
+
+p {
+  font-size: 22px;
+  color: white;
+}
+
 button {
   font-size: 20px;
-  padding: 10px 20px;
+  padding: 12px 25px;
   margin: 20px;
   cursor: pointer;
+  border: none;
+  border-radius: 8px;
 }
+
+#yes {
+  background-color: #ff4d6d;
+  color: white;
+}
+
 #no {
+  background-color: #444;
+  color: white;
   position: absolute;
+}
+
+.heart {
+  position: fixed;
+  top: -10px;
+  color: red;
+  font-size: 20px;
+  animation: fall 3s linear infinite;
+}
+
+@keyframes fall {
+  to {
+    transform: translateY(100vh);
+  }
 }
 </style>
 </head>
+
 <body>
 
-<h1>Will you be my Valentine? ❤️</h1>
-
-<button onclick="yesClicked()">Yes 💖</button>
-<button id="no" onmouseover="moveNo()">No 😜</button>
-
-<script>
-function yesClicked() {
-  document.body.innerHTML = "<h1>Yayyyyy!!! ❤️😍 I love you!!! 💕</h1>";
-}
-
-function moveNo() {
-  var x = Math.random() * window.innerWidth;
-  var y = Math.random() * window.innerHeight;
-  document.getElementById('no').style.left = x + "px";
-  document.getElementById('no').style.top = y + "px";
-}
-</script>
-
-</body>
-</html>
+<h1>Tanu ❤️</h1>
+<p>Your light brown eyes make you look sooo beautiful 😍</p>
+<p>And honestly… they already stole my heart 🥺</p>
