--- a/index.html
+++ b/index.html
@@ -62,3 +62,40 @@ button {
 <h1>Tanu ❤️</h1>
 <p>Your light brown eyes make you look sooo beautiful 😍</p>
 <p>And honestly… they already stole my heart 🥺</p>
+<h1>Will you be my Valentine? 💖</h1>
+
+<button id="yes" onclick="yesClicked()">Yes 💘</button>
+<button id="no" onmouseover="moveNo()">No 🙈</button>
+
+<script>
+function yesClicked() {
+  document.body.innerHTML = `
+  <h1>YAYYYYYY TANU!!! ❤️😍</h1>
+  <p>You just made Swapnil the happiest guy alive 🥹💕</p>
+  <p>I promise to keep admiring those beautiful light brown eyes forever 😘</p>
+  `;
+  startHearts();
+}
+
+function moveNo() {
+  var x = Math.random() * window.innerWidth;
+  var y = Math.random() * window.innerHeight;
+  document.getElementById('no').style.left = x + "px";
+  document.getElementById('no').style.top = y + "px";
+}
+
+function startHearts() {
+  setInterval(function(){
+    var heart = document.createElement("div");
+    heart.className = "heart";
+    heart.innerHTML = "❤️";
+    heart.style.left = Math.random() * 100 + "vw";
+    heart.style.fontSize = (Math.random() * 20 + 20) + "px";
+    document.body.appendChild(heart);
+    setTimeout(() => heart.remove(), 3000);
+  }, 300);
+}
+</script>
+
+</body>
+</html>
