--- a/index.html
+++ b/index.html
@@ -2,51 +2,94 @@
 <html>
 <head>
 <title>For Tanu ❤️</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
+
 <style>
 body {
-  text-align: center;
-  font-family: Arial, sans-serif;
-  background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-  margin-top: 100px;
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(135deg, #ff758c, #ff7eb3);
+  font-family: 'Poppins', sans-serif;
   overflow: hidden;
 }
 
+.card {
+  background: rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(15px);
+  padding: 40px 50px;
+  border-radius: 20px;
+  text-align: center;
+  color: white;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+  width: 90%;
+  max-width: 500px;
+  animation: fadeIn 1.5s ease;
+}
+
 h1 {
-  font-size: 40px;
-  color: #fff;
+  font-family: 'Dancing Script', cursive;
+  font-size: 48px;
+  margin-bottom: 10px;
 }
 
 p {
-  font-size: 22px;
-  color: white;
+  font-size: 18px;
+  margin: 8px 0;
+  line-height: 1.6;
+}
+
+.question {
+  margin-top: 25px;
+  font-size: 26px;
+  font-weight: 600;
+}
+
+.buttons {
+  margin-top: 25px;
+  position: relative;
 }
 
 button {
-  font-size: 20px;
-  padding: 12px 25px;
-  margin: 20px;
-  cursor: pointer;
+  padding: 12px 28px;
+  font-size: 18px;
   border: none;
-  border-radius: 8px;
+  border-radius: 30px;
+  cursor: pointer;
+  margin: 10px;
+  transition: all 0.3s ease;
 }
 
 #yes {
-  background-color: #ff4d6d;
-  color: white;
+  background: white;
+  color: #ff4d88;
+  font-weight: 600;
+}
+
+#yes:hover {
+  transform: scale(1.1);
 }
 
 #no {
-  background-color: #444;
+  background: #333;
   color: white;
   position: absolute;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(20px); }
+  to { opacity: 1; transform: translateY(0); }
 }
 
 .heart {
   position: fixed;
   top: -10px;
-  color: red;
+  color: white;
   font-size: 20px;
-  animation: fall 3s linear infinite;
+  animation: fall linear infinite;
 }
 
 @keyframes fall {
@@ -59,40 +102,48 @@ button {
 
 <body>
 
-<h1>Tanu ❤️</h1>
-<p>Your light brown eyes make you look sooo beautiful 😍</p>
-<p>And honestly… they already stole my heart 🥺</p>
-<h1>Will you be my Valentine? 💖</h1>
+<div class="card">
+  <h1>Tanu ❤️</h1>
+  <p>Your brown eyes and your soft cheeks make you look sooo beautiful and cute 😍</p>
+  <p>Every time I look at you, I fall for you all over again 🥺</p>
+  <p class="question">Will you be my Valentine, Tanu? 💖</p>
 
-<button id="yes" onclick="yesClicked()">Yes 💘</button>
-<button id="no" onmouseover="moveNo()">No 🙈</button>
+  <div class="buttons">
+    <button id="yes" onclick="yesClicked()">Yes 💘</button>
+    <button id="no" onmouseover="moveNo()">No 🙈</button>
+  </div>
+</div>
 
 <script>
 function yesClicked() {
   document.body.innerHTML = `
-  <h1>YAYYYYYY TANU!!! ❤️😍</h1>
-  <p>You just made Swapnil the happiest guy alive 🥹💕</p>
-  <p>I promise to keep admiring those beautiful light brown eyes forever 😘</p>
+  <div style="text-align:center; color:white; font-family:Poppins;">
+    <h1 style="font-family:'Dancing Script'; font-size:50px;">YAYYY TANU!!! ❤️😍</h1>
+    <p style="font-size:22px;">You just made Swapnil the happiest guy alive 🥹💕</p>
+    <p style="font-size:20px;">I promise to always admire those beautiful light brown eyes forever 😘</p>
+  </div>
   `;
   startHearts();
 }
 
 function moveNo() {
-  var x = Math.random() * window.innerWidth;
-  var y = Math.random() * window.innerHeight;
-  document.getElementById('no').style.left = x + "px";
-  document.getElementById('no').style.top = y + "px";
+  const button = document.getElementById("no");
+  const x = Math.random() * (window.innerWidth - 100);
+  const y = Math.random() * (window.innerHeight - 50);
+  button.style.left = x + "px";
+  button.style.top = y + "px";
 }
 
 function startHearts() {
   setInterval(function(){
-    var heart = document.createElement("div");
+    const heart = document.createElement("div");
     heart.className = "heart";
     heart.innerHTML = "❤️";
     heart.style.left = Math.random() * 100 + "vw";
-    heart.style.fontSize = (Math.random() * 20 + 20) + "px";
+    heart.style.fontSize = (Math.random() * 20 + 15) + "px";
+    heart.style.animationDuration = (Math.random() * 3 + 2) + "s";
     document.body.appendChild(heart);
-    setTimeout(() => heart.remove(), 3000);
+    setTimeout(() => heart.remove(), 5000);
   }, 300);
 }
 </script>
