--- a/index.html
+++ b/index.html
@@ -1,184 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>For Tanu ❤️</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
-
+<title>For My Love ❤️</title>
 <style>
 body {
-  margin: 0;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: linear-gradient(135deg, #ff758c, #ff7eb3);
-  font-family: 'Poppins', sans-serif;
-  overflow: hidden;
-}
-
-.card {
-  background: rgba(255, 255, 255, 0.15);
-  backdrop-filter: blur(15px);
-  padding: 40px 50px;
-  border-radius: 20px;
   text-align: center;
-  color: white;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-  width: 90%;
-  max-width: 500px;
-  animation: fadeIn 1.5s ease;
-  position: relative;
+  font-family: Arial;
+  background-color: #ffebf0;
+  margin-top: 100px;
 }
-
 h1 {
-  font-family: 'Dancing Script', cursive;
-  font-size: 48px;
-  margin-bottom: 10px;
+  font-size: 40px;
 }
-
-p {
-  font-size: 18px;
-  margin: 8px 0;
-  line-height: 1.6;
-}
-
-.question {
-  margin-top: 25px;
-  font-size: 26px;
-  font-weight: 600;
-}
-
-.buttons {
-  margin-top: 30px;
-  position: relative;
-  height: 60px;
-}
-
 button {
-  padding: 12px 28px;
-  font-size: 18px;
-  border: none;
-  border-radius: 30px;
-  cursor: pointer;
-  margin: 10px;
-  transition: all 0.3s ease;
-  position: relative;
-}
-
-#yes {
-  background: white;
-  color: #ff4d88;
-  font-weight: 600;
-}
-
-#yes:hover {
-  transform: scale(1.1);
-}
-
-#no {
-  background: #333;
-  color: white;
-  position: absolute;
-}
-
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(20px); }
-  to { opacity: 1; transform: translateY(0); }
-}
-
-.heart {
-  position: fixed;
-  top: -10px;
-  color: white;
   font-size: 20px;
-  animation: fall linear infinite;
+  padding: 10px 20px;
+  margin: 20px;
+  cursor: pointer;
 }
-
-@keyframes fall {
-  to {
-    transform: translateY(100vh);
-  }
+#no {
+  position: absolute;
 }
 </style>
 </head>
-
 <body>
 
-<div class="card">
-  <h1>Tanu ❤️</h1>
-  <p>Your light brown eyes make you look sooo beautiful 😍</p>
-  <p>Every time I look at you, I fall for you all over again 🥺</p>
-  <p class="question">Will you be my Valentine, Tanu? 💖</p>
+<h1>Will you be my Valentine? ❤️</h1>
 
-  <div class="buttons" id="buttonArea">
-    <button id="yes" onclick="yesClicked()">Yes 💘</button>
-    <button id="no">No 🙈</button>
-  </div>
-</div>
+<button onclick="yesClicked()">Yes 💖</button>
+<button id="no" onmouseover="moveNo()">No 😜</button>
 
 <script>
-const noBtn = document.getElementById("no");
-const buttonArea = document.getElementById("buttonArea");
-
-// Make sure it's positioned inside the button area
-noBtn.style.position = "absolute";
-
-buttonArea.addEventListener("mousemove", function(e) {
-  const areaRect = buttonArea.getBoundingClientRect();
-  const btnRect = noBtn.getBoundingClientRect();
-
-  const centerX = btnRect.left + btnRect.width / 2;
-  const centerY = btnRect.top + btnRect.height / 2;
-
-  const distanceX = Math.abs(e.clientX - centerX);
-  const distanceY = Math.abs(e.clientY - centerY);
-
-  // If mouse comes near → jump
-  if (distanceX < 100 && distanceY < 60) {
-    moveInsideArea();
-  }
-});
-
-function moveInsideArea() {
-  const areaWidth = buttonArea.clientWidth;
-  const areaHeight = buttonArea.clientHeight;
-
-  const btnWidth = noBtn.offsetWidth;
-  const btnHeight = noBtn.offsetHeight;
-
-  const maxX = areaWidth - btnWidth;
-  const maxY = areaHeight - btnHeight;
-
-  const randomX = Math.random() * maxX;
-  const randomY = Math.random() * maxY;
-
-  noBtn.style.left = randomX + "px";
-  noBtn.style.top = randomY + "px";
-}
-
 function yesClicked() {
-  document.body.innerHTML = `
-  <div style="text-align:center; color:white; font-family:Poppins;">
-    <h1 style="font-family:'Dancing Script'; font-size:50px;">YAYYY TANU!!! ❤️😍</h1>
-    <p style="font-size:22px;">You just made Swapnil the happiest guy alive 🥹💕</p>
-    <p style="font-size:20px;">I promise to always admire those beautiful light brown eyes forever 😘</p>
-  </div>
-  `;
-  startHearts();
+  document.body.innerHTML = "<h1>Yayyyyy!!! ❤️😍 I love you!!! 💕</h1>";
 }
 
-function startHearts() {
-  setInterval(function(){
-    const heart = document.createElement("div");
-    heart.className = "heart";
-    heart.innerHTML = "❤️";
-    heart.style.left = Math.random() * 100 + "vw";
-    heart.style.fontSize = (Math.random() * 20 + 15) + "px";
-    heart.style.animationDuration = (Math.random() * 3 + 2) + "s";
-    document.body.appendChild(heart);
-    setTimeout(() => heart.remove(), 5000);
-  }, 300);
+function moveNo() {
+  var x = Math.random() * window.innerWidth;
+  var y = Math.random() * window.innerHeight;
+  document.getElementById('no').style.left = x + "px";
+  document.getElementById('no').style.top = y + "px";
 }
 </script>
 
