--- a/index.html
+++ b/index.html
@@ -1,45 +1,141 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>For My Love ❤️</title>
+<title>For Tanu ❤️</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
+
 <style>
 body {
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(135deg, #ff758c, #ff7eb3);
+  font-family: 'Poppins', sans-serif;
+  overflow: hidden;
+}
+
+.card {
+  background: rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(15px);
+  padding: 50px;
+  border-radius: 20px;
   text-align: center;
-  font-family: Arial;
-  background-color: #ffebf0;
-  margin-top: 100px;
+  color: white;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+  width: 90%;
+  max-width: 500px;
+  position: relative;
 }
+
 h1 {
-  font-size: 40px;
+  font-family: 'Dancing Script', cursive;
+  font-size: 48px;
+  margin-bottom: 10px;
 }
+
+p {
+  font-size: 18px;
+  margin: 6px 0;
+}
+
+.question {
+  margin-top: 20px;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.button-area {
+  position: relative;
+  height: 120px; /* Important: fixed space for movement */
+  margin-top: 30px;
+}
+
 button {
-  font-size: 20px;
-  padding: 10px 20px;
-  margin: 20px;
+  padding: 12px 28px;
+  font-size: 18px;
+  border: none;
+  border-radius: 30px;
   cursor: pointer;
+  transition: 0.2s;
 }
+
+#yes {
+  background: white;
+  color: #ff4d88;
+  font-weight: 600;
+  position: relative;
+  z-index: 1;
+}
+
+#yes:hover {
+  transform: scale(1.1);
+}
+
 #no {
+  background: #333;
+  color: white;
   position: absolute;
+  left: 60%;
+  top: 40%;
 }
 </style>
 </head>
+
 <body>
 
-<h1>Will you be my Valentine? ❤️</h1>
+<div class="card">
+  <h1>Tanu ❤️</h1>
+  <p>Your light brown eyes make you look sooo beautiful 😍</p>
+  <p>Every time I look at you, I fall for you all over again 🥺</p>
+  <p class="question">Will you be my Valentine? 💖</p>
 
-<button onclick="yesClicked()">Yes 💖</button>
-<button id="no" onmouseover="moveNo()">No 😜</button>
+  <div class="button-area" id="area">
+    <button id="yes" onclick="yesClicked()">Yes 💘</button>
+    <button id="no">No 😜</button>
+  </div>
+</div>
 
 <script>
-function yesClicked() {
-  document.body.innerHTML = "<h1>Yayyyyy!!! ❤️😍 I love you!!! 💕</h1>";
+const noBtn = document.getElementById("no");
+const area = document.getElementById("area");
+
+// Move FAST when mouse comes near
+area.addEventListener("mousemove", function(e) {
+  const rect = noBtn.getBoundingClientRect();
+
+  const centerX = rect.left + rect.width / 2;
+  const centerY = rect.top + rect.height / 2;
+
+  const distanceX = Math.abs(e.clientX - centerX);
+  const distanceY = Math.abs(e.clientY - centerY);
+
+  if (distanceX < 100 && distanceY < 60) {
+    moveFast();
+  }
+});
+
+function moveFast() {
+  const maxX = area.clientWidth - noBtn.offsetWidth;
+  const maxY = area.clientHeight - noBtn.offsetHeight;
+
+  const randomX = Math.random() * maxX;
+  const randomY = Math.random() * maxY;
+
+  noBtn.style.left = randomX + "px";
+  noBtn.style.top = randomY + "px";
 }
 
-function moveNo() {
-  var x = Math.random() * window.innerWidth;
-  var y = Math.random() * window.innerHeight;
-  document.getElementById('no').style.left = x + "px";
-  document.getElementById('no').style.top = y + "px";
+function yesClicked() {
+  document.body.innerHTML = `
+  <div style="text-align:center; color:white; font-family:Poppins;">
+    <h1 style="font-family:'Dancing Script'; font-size:50px;">YAYYY TANU!!! ❤️😍</h1>
+    <p style="font-size:22px;">You just made Swapnil the happiest guy alive 🥹💕</p>
+    <p style="font-size:20px;">I promise to always admire those beautiful light brown eyes forever 😘</p>
+  </div>
+  `;
 }
 </script>
 
