--- a/index.html
+++ b/index.html
@@ -92,6 +92,43 @@ button {
   to { transform: translateY(100vh); }
 }
 
+/* YES Button Glow Animation */
+#yes {
+  background: white;
+  color: #ff4d88;
+  font-weight: 600;
+  position: relative;
+  z-index: 1;
+  animation: glow 1.5s infinite alternate;
+}
+
+@keyframes glow {
+  from {
+    box-shadow: 0 0 10px rgba(255,255,255,0.6);
+  }
+  to {
+    box-shadow: 0 0 25px rgba(255,255,255,1),
+                0 0 40px rgba(255,77,136,0.8);
+  }
+}
+
+/* Confetti */
+.confetti {
+  position: fixed;
+  width: 10px;
+  height: 10px;
+  top: -10px;
+  animation: fallConfetti linear forwards;
+}
+
+@keyframes fallConfetti {
+  to {
+    transform: translateY(100vh) rotate(720deg);
+    opacity: 0;
+  }
+}
+
+
 </style>
 </head>
 
@@ -140,15 +177,24 @@ function moveFast() {
 }
 
 function yesClicked() {
-  document.body.innerHTML = `
-  <div style="text-align:center; color:white; font-family:Poppins;">
-    <h1 style="font-family:'Dancing Script'; font-size:50px;">YAYYY TANU!!! ❤️😍</h1>
-    <p style="font-size:22px;">You just made Swapnil the happiest guy alive 🥹💕</p>
-    <p style="font-size:20px;">I promise to always admire those beautiful light brown eyes forever 😘</p>
-  </div>
-  `;
 
-  startHearts(); // 🔥 Start animation after replacing content
+  // Smooth fade effect
+  document.body.style.transition = "opacity 0.5s ease";
+  document.body.style.opacity = "0";
+
+  setTimeout(() => {
+    document.body.innerHTML = `
+      <div style="text-align:center; color:white; font-family:Poppins;">
+        <h1 style="font-family:'Dancing Script'; font-size:50px;">YAYYY TANU!!! ❤️😍</h1>
+        <p style="font-size:22px;">You just made Swapnil the happiest guy alive 🥹💕</p>
+        <p style="font-size:20px;">I promise to always admire those beautiful light brown eyes forever 😘</p>
+      </div>
+    `;
+    document.body.style.opacity = "1";
+
+    startHearts();
+    launchConfetti();
+  }, 500);
 }
 
 function startHearts() {
@@ -160,9 +206,28 @@ function startHearts() {
     heart.style.fontSize = (Math.random() * 20 + 15) + "px";
     heart.style.animationDuration = (Math.random() * 3 + 2) + "s";
     document.body.appendChild(heart);
-
     setTimeout(() => heart.remove(), 5000);
   }, 300);
+}
+
+function launchConfetti() {
+  for (let i = 0; i < 120; i++) {
+    const confetti = document.createElement("div");
+    confetti.className = "confetti";
+    confetti.style.left = Math.random() * 100 + "vw";
+    confetti.style.backgroundColor = randomColor();
+    confetti.style.animationDuration = (Math.random() * 3 + 2) + "s";
+    confetti.style.width = (Math.random() * 8 + 5) + "px";
+    confetti.style.height = confetti.style.width;
+    document.body.appendChild(confetti);
+
+    setTimeout(() => confetti.remove(), 5000);
+  }
+}
+
+function randomColor() {
+  const colors = ["#ff4d88", "#ffffff", "#ffd700", "#00e1ff", "#ff7eb3"];
+  return colors[Math.floor(Math.random() * colors.length)];
 }
 </script>
 
