--- a/index.html
+++ b/index.html
@@ -186,8 +186,9 @@ function yesClicked() {
     document.body.innerHTML = `
       <div style="text-align:center; color:white; font-family:Poppins;">
         <h1 style="font-family:'Dancing Script'; font-size:50px;">YAYYY TANU!!! ❤️😍</h1>
-        <p style="font-size:22px;">You just made Swapnil the happiest guy alive 🥹💕</p>
-        <p style="font-size:20px;">I promise to always admire those beautiful light brown eyes forever 😘</p>
+        <p style="font-size:25px;">You just made Swapnil the happiest guy alive 🥹💕</p>
+        <p style="font-size:22px;">I promise to always admire those beautiful brown eyes forever. 😘</p>
+        <p style="font-size:19px;">Once you come back from Indore, we will celebrate valentine's day together and have candle night dinner with tasty food. 😘</p>
       </div>
     `;
     document.body.style.opacity = "1";
